# autophot

./: .gitignore  CODE_REVIEW_FLOW_AND_IMPROVEMENTS.md  LICENSE  LOGGING_AND_MESSAGES.md  MANIFEST.in  NAMING_CONVENTIONS.md  PSF_AP_MAGNITUDE_NORMALIZATION.md  README.md  aperture.py  autophot.mplstyle  autophot.py  autophot_tokens_local.py.example  background.py  batch_main.py  bug_fix_patch.py  catalog.py  check.py  check_telescope_entries.py  completely_dynamic_filters_example.yml  context_limits_summary.txt  cosmic.py  create_detection_collage.py  custom_llm_setup.md  debug_source_selection.py  debug_tns.py  driver_with_coords.py  dynamic_filter_validation.py  environment.yml  example_mixed_telescope_config.yml  extended_filters_example.yml  fix_template_headers.py  fixed_driver_script.py  functions.py  fwhm.py  gauss_3.0_7x7.conv  gaussian_7x7.conv  inspect_telescope.py  install_autophot_fixed.sh  license  lightcurve.py  (+28 more)
.ipynb_checkpoints/: autophot_example-checkpoint.ipynb  example_call_database-checkpoint.ipynb
autophot/: __init__.py  aperture.py  autophot.mplstyle  autophot.py  autophot_main.py  autophot_tokens.py  background.py  catalog.py  check.py  cosmic.py  functions.py  fwhm.py  hst.py  lightcurve.py  limits.py  main.py  mask.py  plot.py  prep_input.py  prepare.py  psf.py  requirements.txt  templates.py  wcs.py  zeropoint.py
autophot/.ipynb_checkpoints/: autophot_example-checkpoint.ipynb
autophot/databases/: catalog.yml  default_input.yml  filters.yml
autophot/databases/extinction/: ozone_coeff.txt
autophot/example/: save_example_data.py
autophot/example/tutorial_data/: my_first_catalog.csv
autophot/example_notebooks/: README.md  Template Subtraction Example.ipynb  basic_example.ipynb
autophot/example_notebooks/.ipynb_checkpoints/: Template Subtraction Example-checkpoint.ipynb
autophot/utils/: run_sfft.py
autophot_db/: telescope.yml
autophot_gaia_curves/: __init__.py  builder.py  cli.py  gaia_archive.py
conda/: README.md
conda-recipe/: meta.yaml
conda/recipe/: bld.bat  build.sh  conda_build_config.yaml  meta.yaml
databases/: __init__.py  catalog.yml  default_input.yml  filters.yml
docs/: .readthedocs.yml  DETECTION_CRITERIA_RESEARCH.md  requirements.txt
docs/source/: Commands.rst  autophot.example.rst  autophot.packages.rst  autophot.rst  autophot_instructions.rst  autophot_instructions.txt  conf.py  index.rst  installation.rst  instructions.rst  intro.rst  modules.rst  packages.rst  tutorials.rst
docs/source/example_notebooks/.ipynb_checkpoints/: Template Subtraction Example-checkpoint.ipynb  template_subtraction_example-checkpoint.ipynb
example/: save_example_data.py
example_notebooks/: README.md  REDUCED.csv  add_your_catalog_example.ipynb  autophot_example.ipynb  basic_example.ipynb  example_call_database.ipynb  generic_example.ipynb  template_subtraction_and_WCS.ipynb
example_notebooks/.ipynb_checkpoints/: add_your_catalog_example-checkpoint.ipynb
scripts/: build_and_upload_conda.sh
utils/: __init__.py  alignment_verification.py  emcee_limiting_detection.py  fix_panstarrs_headers.py  inpaint.py  reference.fits  run_IDC.py  run_sex.py  run_sfft.py  science.fits  wcs_only_alignment_analysis.py
