[build-system]
requires = ["setuptools>=69", "wheel", "numpy>=1.26,<2"]
build-backend = "setuptools.build_meta"

[project]
name = "autophot"
version = "0.1.11"
description = "AutoPHOT object photometry pipeline (CCD/NIR; calibrated aperture/PSF photometry; template subtraction)."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [{name = "AutoPHOT contributors"}]
dependencies = [
  "astroalign==2.6.1",
  "astropy==6.1.6",
  "astroquery==0.4.7",
  "astroscrappy==1.2.0",
  "emcee==3.1.6",
  "lmfit==1.3.2",
  "matplotlib==3.10.0",
  "numpy>=1.26,<2",
  "pandas==2.2.3",
  "photutils==2.0.2",
  "PyYAML==6.0.2",
  "reproject==0.14.1",
  "requests==2.32.3",
  "scikit-image==0.25.0",
  "scikit-learn>=1.3",
  "scipy==1.15.1",
  "tqdm>=4.66",
]

[project.optional-dependencies]
# Pip-only dependencies (not consistently available on conda channels).
# Install as needed, e.g. `pip install -e ".[refcat,sfft]"`.
refcat = ["mastcasjobs==0.0.7"]
sfft = ["sfft==1.6.3"]
aafitrans = ["aafitrans==0.2.1"]
all = ["mastcasjobs==0.0.7", "sfft==1.6.3", "aafitrans==0.2.1"]

[project.scripts]
autophot-main = "main:run_photometry"
autophot-driver = "autophot:main"
autophot-gaia-curves = "autophot_gaia_curves.cli:main"

[tool.setuptools]
include-package-data = true
py-modules = [
  "aperture",
  "autophot",
  "autophot_tokens",
  "background",
  "batch_main",
  "catalog",
  "check",
  "cosmic",
  "functions",
  "fwhm",
  "lightcurve",
  "limits",
  "main",
  "mask",
  "plot",
  "prepare",
  "psf",
  "templates",
  "tns",
  "wcs",
  "zeropoint",
]

[tool.setuptools.packages.find]
include = ["utils*", "databases*", "autophot_gaia_curves*"]

[tool.setuptools.package-data]
databases = ["*.yml"]
utils = ["*.py"]

[tool.setuptools.data-files]
"." = ["autophot.mplstyle"]

