[build-system]
requires = ["setuptools>=69", "wheel", "numpy==2.4.6"]
build-backend = "setuptools.build_meta"

[project]
name = "autophot"
version = "1.0.7"
description = "AutoPHOT object photometry pipeline (CCD/NIR; calibrated aperture/PSF photometry; template subtraction)."
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [{name = "AutoPHOT contributors"}]
dependencies = [
  "astroalign==2.6.2",
  "astropy==7.2.0",
  "astroquery==0.4.11",
  "astroscrappy==1.2.0",
  "corner==2.2.3",
  "ccdproc==2.5.1",
  "emcee==3.1.6",
  "lmfit==1.3.4",
  "matplotlib==3.10.9",
  "numpy==2.4.6",
  "pandas==3.0.1",
  "photutils==3.0.0",
  "PyYAML==6.0.3",
  "reproject==0.20.0",
  "requests==2.34.2",
  "scikit-image==0.26.0",
  "scikit-learn==1.9.0",
  "scipy==1.17.1",
  "sfft==1.7.1",
  "tqdm==4.68.2",
]

[project.optional-dependencies]
# Pip-only dependencies (not consistently available on conda channels).
# Install as needed, e.g. `pip install -e ".[refcat,sfft]"`.
refcat = ["mastcasjobs==0.0.7"]
sfft = ["sfft==1.7.1"]
aafitrans = ["aafitrans==0.2.1"]
all = ["mastcasjobs==0.0.7", "sfft==1.7.1", "aafitrans==0.2.1"]

[project.scripts]
autophot-main = "main:run_photometry"
autophot-driver = "autophot:main"
autophot-gaia-curves = "autophot_gaia_curves.cli:main"
autophot-inspect-telescope = "inspect_telescope:main"

[tool.setuptools]
include-package-data = true
py-modules = [
  "aperture",
  "autophot",
  "autophot_tokens",
  "background",
  "batch_main",
  "catalog",
  "check",
  "cosmic",
  "functions",
  "inspect_telescope",
  "fwhm",
  "lightcurve",
  "limits",
  "main",
  "mask",
  "plot",
  "plotting_utils",
  "prepare",
  "psf",
  "templates",
  "tns",
  "wcs",
  "zeropoint",
]

[tool.setuptools.packages.find]
include = ["utils*", "databases*", "autophot_gaia_curves*"]

[tool.setuptools.package-data]
databases = ["*.yml"]
utils = ["*.py"]

[tool.setuptools.data-files]
"." = ["autophot.mplstyle"]

